--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="chats_fragment">Chats Fragment</string>
     <string name="groups_fragment">Groups Fragment</string>
     <string name="contacts_fragment">Contacts Fragment</string>
+    <string name="friends_fragment">Friends Fragment</string>
+    <string name="contact_name">Contact Name</string>
+    <string name="status">Status</string>
 </resources>
